Fix for bug #25993: mysqldump crashes with merge table and -c option

opt_complete_insert was improperly used by accident.
Use complete_insert flag instead.